# crudgen

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: user.yaml
src/crudgen/: cli.py
src/crudgen.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
src/crudgen/core/: config.py  generator.py  loader.py
src/crudgen/core/templates/fastapi/: models.py.j2  router.py.j2  schemas.py.j2
tests/: test_config_load.py  test_generation_files.py
